Bug 1586750, don't compile event handlers on unloaded windows r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D48983